bugs and stuff that annoys me for now: - the map isn't centered despite all the debug telling me that it is suppoed to be so - I added a debug thing in the bottom right corner that tells me that the boudaries are not matching, and that we should get rid of or clean up before releasing - the map strangely isn't visible when not initially controlling the zoom, looks like the sr2 map does, and that it's due to the fact that the initial zoom is reported to me 0 instead of 3, 3.5

--- a/src/index.css
+++ b/src/index.css
@@ -60,6 +60,7 @@
   @apply bg-beigedark;
 }
 
+.dark .bg-btn.disabled,
 .bg-btn.disabled {
   @apply bg-gray-500;
 }
